// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markExports() all exports should not be overwritten - (["marked", "source", "markExports"]) - [{},"a",{}] 1`] = `
Map {
  "a" => true,
}
`;

exports[`markExports() all exports should not be overwritten - (["marked", "source", "markExports"]) - [{},"a",null] 1`] = `
Map {
  "a" => true,
}
`;

exports[`markExports() all exports should not be overwritten - (["marked", "source", "markExports"]) - [{},"a",true] 1`] = `
Map {
  "a" => true,
}
`;

exports[`markExports() exports should append and dedupe - (["marked", "source", "markExports"]) - [{},"a",{}] 1`] = `
Map {
  "a" => Set {
    "a1",
    "a3",
  },
}
`;

exports[`markExports() exports should append and dedupe - (["marked", "source", "markExports"]) - [{},"a",{}] 2`] = `
Map {
  "a" => Set {
    "a1",
    "a3",
    "a2",
  },
}
`;

exports[`markExports() limited exports should be overwritten by all exports - (["marked", "source", "markExports"]) - [{},"a",{}] 1`] = `
Map {
  "a" => Set {
    "a1",
    "a2",
    "a3",
  },
}
`;

exports[`markExports() limited exports should be overwritten by all exports - (["marked", "source", "markExports"]) - [{},"a",true] 1`] = `
Map {
  "a" => true,
}
`;

exports[`markExports() no exports should be overwritten by limited exports - (["marked", "source", "markExports"]) - [{},"a",{}] 1`] = `
Map {
  "a" => Set {
    "a1",
  },
}
`;

exports[`markExports() no exports should be overwritten by limited exports - (["marked", "source", "markExports"]) - [{},"a",{}] 2`] = `
Map {
  "a" => Set {
    "a1",
    "a2",
    "a3",
  },
}
`;

exports[`markExports() no exports should be overwritten by limited exports - (["marked", "source", "markExports"]) - [{},"a",null] 1`] = `
Map {
  "a" => null,
}
`;

exports[`markExports() no exports should not mark - (["marked", "source", "markExports"]) - [{},"a",null] 1`] = `
Map {
  "a" => null,
}
`;
